hphp/hack/test/typecheck/tuple_union.php.like_types.exp
File "tuple_union.php", line 14, characters 5-105:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
